feat: removed logic from chooseCard due to unresolved issues